fix: 요구사항에 따라 set을 list로 변경