@@ -1,6 +1,7 @@
 package pairmatching.domain.crew;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import pairmatching.domain.curriculum.Course;
 
 public class Crews {
@@ -15,6 +16,6 @@ public class Crews {
         return crews.stream()
                 .filter(crew -> crew.isEqualCourse(course))
                 .map(Crew::getName)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
